modification paragraphes liens

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <div class="overlay-content">
             <label for="overlay-toggle-projet" class="close-button">&times;</label>
             <ul>
-                <p>J'ai choisi de réaliser un site web mobile, Ver'ify Compost, dédié à l'aide au tri des biodéchets. Ce site a pour objectif de sensibiliser les utilisateurs, de les accompagner dans leurs démarches de tri écologique et de contribuer à réduire l'excès de déchets jetés.</p><p>Actuellement, la maquette ainsi que le prototype dynamique du site sont disponibles sur mon Figma.</p>
-                <li>
-                    <a href="https://www.figma.com/design/I3VE2n0b4SOG1q0VF3Tl2E/Projet-Ver'ify-Compost?node-id=672-1132&node-type=canvas&t=hweVFGwSEwvgwlLe-0" target="_blank"><img src="./Images/figma.png" alt="logo_figma" class="logo_contact"/></a>
-                </li>
-                <p>Le site est également accessible en ligne (en mobile first), en étant toujours en cours de développement. Il me sert principalement à avoir une vision concrète de l'avancement et des fonctionnalités à venir. Certaines sections peuvent être incomplètes ou en travaux (lien ci-dessous).</p>
+                <p>J'ai choisi de réaliser un site web mobile, Ver'ify Compost, dédié à l'aide au tri des biodéchets. Ce site a pour objectif de sensibiliser les utilisateurs, de les accompagner dans leurs démarches de tri écologique et de contribuer à réduire l'excès de déchets jetés.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Il me sert principalement à avoir une vision concrète de l'avancement et des fonctionnalités à venir. Certaines sections peuvent être incomplètes ou en travaux (lien ci-dessous).</p>
                 <li>
                     <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/logo.png" alt="logo_figma" class="logo_contact"/></a>
+                </li>
+                <p>La maquette ainsi que le prototype dynamique du site sont également disponibles sur mon Figma.</p>
+                <li>
+                    <a href="https://www.figma.com/design/I3VE2n0b4SOG1q0VF3Tl2E/Projet-Ver'ify-Compost?node-id=672-1132&node-type=canvas&t=hweVFGwSEwvgwlLe-0" target="_blank"><img src="./Images/figma.png" alt="logo_figma" class="logo_contact"/></a>
                 </li>
             </ul>
         </div>
