correction chemin fichier logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul>
                 <p>J'ai choisi de réaliser un site web mobile, Ver'ify Compost, dédié à l'aide au tri des biodéchets. Ce site a pour objectif de sensibiliser les utilisateurs, de les accompagner dans leurs démarches de tri écologique et de contribuer à réduire l'excès de déchets jetés.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Il me sert principalement à avoir une vision concrète de l'avancement et des fonctionnalités à venir. Certaines sections peuvent être incomplètes ou en travaux (lien ci-dessous).</p>
                 <li>
-                    <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/en_ligne.png" alt="logo_site_web" class="logo_contact"/></a>
+                    <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/verifycompost.png" alt="logo_site_web" class="logo_contact"/></a>
                 </li>
                 <p>La maquette ainsi que le prototype dynamique du site sont également disponibles sur mon Figma.</p>
                 <li>
