ajout presentation projet site web

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </div>
     </div>
     <div class="overlay" id="overlay-projet">
-        <div class="overlay-content">
+        <div class="overlay-content" id="presentation_projet">
             <label for="overlay-toggle-projet" class="close-button">&times;</label>
             <ul>
-                <p>J'ai choisi de réaliser un site web mobile, Ver'ify Compost, dédié à l'aide au tri des biodéchets. Ce site a pour objectif de sensibiliser les utilisateurs, de les accompagner dans leurs démarches de tri écologique et de contribuer à réduire l'excès de déchets jetés.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Il me sert principalement à avoir une vision concrète de l'avancement et des fonctionnalités à venir. Certaines pages peuvent être incomplètes ou en travaux (lien ci-dessous).</p>
+                <p>"Ver'ify Compost" est un projet de site web mobile lancé fin octobre 2024 dans le cadre de ma formation en développement web et web mobile au sein de l'Adrar Academy à Toulouse. Il s'agit d'un projet évolutif qui s'étendra tout au long de mon parcours d'apprentissage, en fonction des langages et technologies que j'apprendrai (actuellement HTML/CSS/JavaScript). L'objectif principal du site est de faciliter le tri des déchets compostables pour les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires, rapides et pratiques.</p><p>Par ailleurs, l’aspect écologique est au cœur de ce projet : "Ver'ify Compost" vise à sensibiliser les utilisateurs à une gestion durable des biodéchets tout en promouvant des pratiques respectueuses de l’environnement. Ce projet est une opportunité idéale pour concilier mes préoccupations environnementales avec mon apprentissage technique, tout en répondant à un besoin concret.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Il me sert principalement à avoir une vision concrète de l'avancement et des fonctionnalités à venir. Certaines pages peuvent être incomplètes ou en travaux (lien ci-dessous).</p>
                 <li>
                     <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/verifycompost.png" alt="logo_site_web" class="logo_contact" id="verifycompost"/></a>
                 </li>
