ajout presentation projet site web

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="overlay-content" id="presentation_projet">
             <label for="overlay-toggle-projet" class="close-button">&times;</label>
             <ul>
-                <p>"Ver'ify Compost" est un projet de site web lancé fin octobre 2024 dans le cadre de ma formation en développement web mobile. Il s'agit d'un projet évolutif qui s'étendra tout au long de mon parcours d'apprentissage. L'objectif principal du site est d'aider au tri des biodéchets, les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires et rapides.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Il me sert principalement à avoir une vision concrète de l'avancement et des fonctionnalités à venir. Certaines pages peuvent être incomplètes ou en travaux (lien ci-dessous).</p>
+                <p>"Ver'ify Compost" est un projet de site web lancé fin octobre 2024 dans le cadre de ma formation en développement web mobile. L'objectif principal du site est d'aider au tri des biodéchets, les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires et rapides.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Certaines pages peuvent être incomplètes (lien ci-dessous).</p>
                 <li>
                     <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/verifycompost.png" alt="logo_site_web" class="logo_contact" id="verifycompost"/></a>
                 </li>
