ajout autoformation et certification

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="https://github.com/Anais-DZ" class="links" target="_blank">GitHub</a></li>
             <li><label for="overlay-toggle-projet" class="links">Projet: Ver'ify Compost</label></li> 
             <li><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
+            <li><label for="overlay-toggle-certification" class="links">Autoformations</label></li>
             <!-- Nouveau bouton pour afficher l'overlay -->
             <li><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
         </ul>
@@ -32,6 +33,7 @@
     <input type="checkbox" id="overlay-toggle-cv" class="overlay-toggle">
     <input type="checkbox" id="overlay-toggle-projet" class="overlay-toggle">
     <input type="checkbox" id="overlay-toggle-contacts" class="overlay-toggle">
+    <input type="checkbox" id="overlay-toggle-certification" class="overlay-toggle">
 
     <!-- Overlay pour les contacts -->
     <div class="overlay" id="overlay-cv">
@@ -80,6 +82,28 @@
                     <a href="https://wa.me/+33686601753" target="_blank">
                         <img src="./Images/whatsapp.png" alt="logo_whatsapp" class="logo_contact" />WhatsApp
                     </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="overlay" id="overlay-certification">
+        <div class="overlay-content" id="certification">
+            <label for="overlay-toggle-certification" class="close-button">&times;</label>
+            <ul>
+                <li>
+                    <a href="https://openclassrooms.com/fr/course-certificates/6418398842" target="_blank"><img src="./Images/code.png" alt="certificat_html" class="logo_contact" /><p>Certificat de réussite HTML5 & CSS3 <span>- fév. 2024 - OpenClassrooms</span></p></a>
+                </li>
+                <li>
+                    <a href="https://openclassrooms.com/fr/course-certificates/7804866874" target="_blank"><img src="./Images/github.png" alt="certificat_git" class="logo_contact" /><p>Certificat de réussite Git & GitHub <span>- mars 2024 - OpenClassrooms</span></p></a>
+                </li>
+                <li>
+                    <a href="https://openclassrooms.com/fr/course-certificates/7955806453" target="_blank"><img src="./Images/chatgpt.png" alt="certificat_chatgpt" class="logo_contact" /><p>Certificat de réussite ChatGPT <span>- mars 2024 - OpenClassrooms</span></p></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/learning/certificates/1460cf264a402d8115c6c73dbd5eb61e571f3241688da5ad9ba087841083afea?u=42777940" target="_blank"><img src="./Images/greentech.png" alt="certificat_greenit" class="logo_contact" /><p>Certificat d'accomplissement Green IT <span>- déc. 2024 - LinkedIn Learning</span></p></a>
+                </li>
+                <li>
+                    <a href="./certificats/attestation_anssi.pdf" target="_blank"><img src="./Images/security.png" alt="certificat_anssi" class="logo_contact" /><p>Attestation de suivi ANSSI <span>- oct. 2024 - SecNumacadémie</span></p></a>
                 </li>
             </ul>
         </div>
