ajout des certificats en pdf

--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
             <label for="overlay-toggle-certification" class="close-button">&times;</label>
             <ul>
                 <li>
-                    <a href="https://openclassrooms.com/fr/course-certificates/6418398842" target="_blank"><img src="./Images/code.png" alt="certificat_html" class="logo_contact" /><p>Certificat de réussite HTML5 & CSS3 <span>- fév. 2024 - OpenClassrooms</span></p></a>
+                    <a href="./certificats/Certificat_html_css.pdf" target="_blank"><img src="./Images/code.png" alt="certificat_html" class="logo_contact" /><p>Certificat de réussite HTML5 & CSS3 <span>- fév. 2024 - OpenClassrooms</span></p></a>
                 </li>
                 <li>
-                    <a href="https://openclassrooms.com/fr/course-certificates/7804866874" target="_blank"><img src="./Images/github.png" alt="certificat_git" class="logo_contact" /><p>Certificat de réussite Git & GitHub <span>- mars 2024 - OpenClassrooms</span></p></a>
+                    <a href="./certificats/Certificat_github.pdf" target="_blank"><img src="./Images/github.png" alt="certificat_git" class="logo_contact" /><p>Certificat de réussite Git & GitHub <span>- mars 2024 - OpenClassrooms</span></p></a>
                 </li>
                 <li>
-                    <a href="https://openclassrooms.com/fr/course-certificates/7955806453" target="_blank"><img src="./Images/chatgpt.png" alt="certificat_chatgpt" class="logo_contact" /><p>Certificat de réussite ChatGPT <span>- mars 2024 - OpenClassrooms</span></p></a>
+                    <a href="./certificats/certificat_chatgpt.pdf" target="_blank"><img src="./Images/chatgpt.png" alt="certificat_chatgpt" class="logo_contact" /><p>Certificat de réussite ChatGPT <span>- mars 2024 - OpenClassrooms</span></p></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/learning/certificates/1460cf264a402d8115c6c73dbd5eb61e571f3241688da5ad9ba087841083afea?u=42777940" target="_blank"><img src="./Images/greentech.png" alt="certificat_greenit" class="logo_contact" /><p>Certificat d'accomplissement Green IT <span>- déc. 2024 - LinkedIn Learning</span></p></a>
+                    <a href="./certificats/CertificatDaccomplissement_Le Green IT  Mettre en place le numerique responsable.pdf" target="_blank"><img src="./Images/greentech.png" alt="certificat_greenit" class="logo_contact" /><p>Certificat d'accomplissement Green IT <span>- déc. 2024 - LinkedIn Learning</span></p></a>
                 </li>
                 <li>
                     <a href="./certificats/attestation_anssi.pdf" target="_blank"><img src="./Images/security.png" alt="certificat_anssi" class="logo_contact" /><p>Attestation de suivi ANSSI <span>- oct. 2024 - SecNumacadémie</span></p></a>
