correction faut d'orthographe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="https://github.com/Anais-DZ" class="links" target="_blank">GitHub</a></li>
             <li><label for="overlay-toggle-projet" class="links">Projet: Ver'ify Compost</label></li> 
             <li><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
-            <li><label for="overlay-toggle-certification" class="links">Autoformations</label></li>
+            <li><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
             <!-- Nouveau bouton pour afficher l'overlay -->
             <li><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
         </ul>
