changement chemin cv

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="information">
         <h1 class="profile_name">Anaïs DIEZ</h1>
-        <p class="profile_presentation">En recherche de stage dans le Développement Web & Web mobile du 24 mars 2025 au 17 mai 2025 dans la région toulousaine.</p>
+        <p class="profile_presentation">En recherche d'un stage non rémunéré dans le Développement Web & Web mobile du 24 mars 2025 au 16 mai 2025 dans la région toulousaine.</p>
 
         <ul class="menu-list">
             <li><label for="overlay-toggle-cv" class="links">CV</label></li>
@@ -44,7 +44,7 @@
                     <a href="https://cv-adiez.vercel.app/" target="_blank"><img src="./Images/en_ligne.png" alt="en_ligne" class="logo_contact"/>CV en ligne</a>
                 </li>
                 <li>
-                    <a href="CV_A_DIEZ.pdf" target="_blank"><img src="./Images/pdf.png" alt="pdf" class="logo_contact" />CV en PDF</a>
+                    <a href="cv-anais-diez.pdf" target="_blank"><img src="./Images/pdf.png" alt="pdf" class="logo_contact" />CV en PDF</a>
                 </li>
             </ul>
         </div>
