--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <p class="profile_presentation">Mon parcours professionnel m’a permis de développer des compétences transférables essentielles : <strong>contact client, gestion d’équipe, rigueur, organisation et esprit collaboratif. Curieuse et autonome</strong>, je suis prête à relever de nouveaux défis dans le domaine du numérique.</p>
 
         <ul class="menu-list">
-            <li data-aos="fade-left"><label for="overlay-toggle-cv" class="links">CV</label></li>
-            <li data-aos="fade-right"><a href="https://www.linkedin.com/in/anaïs-diez" class="links" target="_blank">LinkedIn</a></li>
-            <li data-aos="fade-left"><a href="https://github.com/Anais-DZ" class="links" target="_blank">GitHub</a></li>
-            <li data-aos="fade-right"><label for="overlay-toggle-projet" class="links">Projet: Ver'ify Compost</label></li> 
-            <li data-aos="fade-left"><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
-            <li data-aos="fade-right"><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
+            <li data-aos="fade-down-left" data-aos-duration="1000"><label for="overlay-toggle-cv" class="links">CV</label></li>
+            <li data-aos="fade-down-right" data-aos-duration="1000"><a href="https://www.linkedin.com/in/anaïs-diez" class="links" target="_blank">LinkedIn</a></li>
+            <li data-aos="fade-down-left" data-aos-duration="1000"><a href="https://github.com/Anais-DZ" class="links" target="_blank">GitHub</a></li>
+            <li data-aos="fade-down-right" data-aos-duration="1000"><label for="overlay-toggle-projet" class="links">Projet: Ver'ify Compost</label></li> 
+            <li data-aos="fade-down-left" data-aos-duration="1000"><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
+            <li data-aos="fade-down-right" data-aos-duration="1000"><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
             <!-- Nouveau bouton pour afficher l'overlay -->
             <li><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
         </ul>
