--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li data-aos="fade-down-left" data-aos-duration="1000"><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
             <li data-aos="fade-down-right" data-aos-duration="1000"><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
             <!-- Nouveau bouton pour afficher l'overlay -->
-            <li><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
+            <li data-aos="fade-up"><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
         </ul>
     </section>
 
