--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <section class="information">
         <h1 class="profile_name">Anaïs DIEZ</h1>
-        <p class="profile_presentation"><strong>Développeuse Web & Web Mobile</strong> en formation à l’ADRAR Digital Academy depuis octobre 2024, j’allie mes compétences techniques (<strong>HTML, CSS, JavaScript, PHP, MySQL</strong>) et ma maîtrise d’outils comme <strong>GitHub, VS Code et Figma</strong> à 14 ans d’expérience professionnelle.
+        <p data-aos="fade-left" data-aos-duration="1000" class="profile_presentation"><strong>Développeuse Web & Web Mobile</strong> en formation à l’ADRAR Digital Academy depuis octobre 2024, j’allie mes compétences techniques (<strong>HTML, CSS, JavaScript, PHP, MySQL</strong>) et ma maîtrise d’outils comme <strong>GitHub, VS Code et Figma</strong> à 14 ans d’expérience professionnelle.
         Ayant une préférence pour le <strong>Front-End</strong>, je prends plaisir à concevoir des <strong>interfaces esthétiques et fonctionnelles</strong>.</p>
-        <p class="profile_presentation">Mon parcours professionnel m’a permis de développer des compétences transférables essentielles : <strong>contact client, gestion d’équipe, rigueur, organisation et esprit collaboratif. Curieuse et autonome</strong>, je suis prête à relever de nouveaux défis dans le domaine du numérique.</p>
+        <p data-aos="fade-right" data-aos-duration="1000" class="profile_presentation">Mon parcours professionnel m’a permis de développer des compétences transférables essentielles : <strong>contact client, gestion d’équipe, rigueur, organisation et esprit collaboratif. Curieuse et autonome</strong>, je suis prête à relever de nouveaux défis dans le domaine du numérique.</p>
 
         <ul class="menu-list">
             <li data-aos="fade-down-left" data-aos-duration="1000"><label for="overlay-toggle-cv" class="links">CV</label></li>
@@ -29,8 +29,9 @@
             <li data-aos="fade-down-left" data-aos-duration="1000"><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
             <li data-aos="fade-down-right" data-aos-duration="1000"><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
             <!-- Nouveau bouton pour afficher l'overlay -->
-            <li data-aos="fade-up"><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
+            <li data-aos="fade-up" data-aos-duration="1000"><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
         </ul>
+        <p></p>
     </section>
 
     <!-- Checkbox pour gérer l'état de l'overlay -->
