ajout de l'onglet du projet Tic Tac Toe

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <p data-aos="fade-right" data-aos-duration="800" class="profile_presentation">Mon parcours professionnel m’a permis de développer des compétences transférables essentielles : contact client, gestion d’équipe, rigueur, organisation et esprit collaboratif. Curieuse et autonome, je suis prête à relever de nouveaux défis dans le domaine du numérique.</p>
 
         <ul class="menu-list">
-            <li data-aos="fade-left" data-aos-duration="800"><label for="overlay-toggle-cv" class="links">CV</label></li>
-            <li data-aos="fade-right" data-aos-duration="800"><a href="https://www.linkedin.com/in/anaïs-diez" class="links" target="_blank">LinkedIn</a></li>
-            <li data-aos="fade-left" data-aos-duration="800"><a href="https://github.com/Anais-DZ" class="links" target="_blank">GitHub</a></li>
-            <li data-aos="fade-left" data-aos-duration="800"><a href="https://xo-arena.vercel.app/" class="links" target="_blank">Projet : Tic-Tac-Toe</a></li>
-            <li data-aos="fade-right" data-aos-duration="800"><label for="overlay-toggle-projet" class="links">Projet: Ver'ify Compost</label></li> 
-            <li data-aos="fade-left" data-aos-duration="800"><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
-            <li data-aos="fade-right" data-aos-duration="800"><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
+            <li><label for="overlay-toggle-cv" class="links">CV</label></li>
+            <li><a href="https://www.linkedin.com/in/anaïs-diez" class="links" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/Anais-DZ" class="links" target="_blank">GitHub</a></li>
+            <li><a href="https://xo-arena.vercel.app/" class="links" target="_blank">Projet : Tic-Tac-Toe</a></li>
+            <li><label for="overlay-toggle-projet" class="links">Projet: Ver'ify Compost</label></li> 
+            <li><a href="https://www.flickr.com/photos/themis_photographie/" class="links" target="_blank">Flikr</a></li>
+            <li><label for="overlay-toggle-certification" class="links">Autoformation</label></li>
             <!-- Nouveau bouton pour afficher l'overlay -->
-            <li data-aos="fade-up" data-aos-duration="800"><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
+            <li><label for="overlay-toggle-contacts" class="links">Me contacter</label></li>
         </ul>
         <p></p>
     </section>
