mise à jour de la présentation

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <section class="information">
         <h1 class="profile_name">Anaïs DIEZ</h1>
-        <p data-aos="fade-left" data-aos-duration="800" class="profile_presentation">Développeuse Web & Web Mobile en formation à l’ADRAR Digital Academy depuis octobre 2024, j’allie mes compétences techniques (HTML, CSS, JavaScript, PHP, MySQL) et ma maîtrise d’outils comme GitHub, VS Code et Figma à 14 ans d’expérience professionnelle.
-        Ayant une préférence pour le Front-End, je prends plaisir à concevoir des interfaces esthétiques et fonctionnelles.</p>
-        <p data-aos="fade-right" data-aos-duration="800" class="profile_presentation">Mon parcours professionnel m’a permis de développer des compétences transférables essentielles : contact client, gestion d’équipe, rigueur, organisation et esprit collaboratif. Curieuse et autonome, je suis prête à relever de nouveaux défis dans le domaine du numérique.</p>
+        <p class="profile_presentation">Forte de 14 ans d’expérience professionnelle, j'ai entrepris avec succès une formation dans le <strong>Développement Web et Web mobile</strong> à l’ADRAR Digital Academy. Cette formation m’a permis de maîtriser le développement front-end avec des langages tels que <strong>HTML5, CSS3, JavaScript</strong>, ainsi que la librairie <strong>React</strong>. J’ai également acquis des compétences en back-end, notamment en <strong>PHP, SQL</strong>, et dans la mise en place d'<strong>API REST</strong>.</p>
+        <p class="profile_presentation">L’expérience de création et de débogage de code a été particulièrement enrichissante sur le plan personnel et m’a donné l'envie de poursuivre cet apprentissage et de découvrir de nouvelles technologies. C’est pourquoi je souhaite désormais suivre une formation en <strong>Conception et Développement d'Applications</strong>.</p>
+        <p class="profile_presentation">Je suis donc actuellement à la recherche d'<strong>une alternance d'une durée de 12 mois</strong>, à savoir 3 semaines en entreprise et une semaine en centre de formation, <strong>à partir de juillet ou octobre 2025</strong>, pour approfondir mes connaissances et en acquérir de nouvelles dans un environnement professionnel qui m’offrira à la fois sérieux et expériences enrichissantes.</p>
 
         <ul class="menu-list">
             <li><label for="overlay-toggle-cv" class="links">CV</label></li>
@@ -50,7 +50,7 @@
                     <a href="https://cv-adiez.vercel.app/" target="_blank"><img src="./Images/en_ligne.png" alt="en_ligne" class="logo_contact"/>CV en ligne</a>
                 </li>
                 <li>
-                    <a href="cv_anais_diez.pdf" target="_blank"><img src="./Images/pdf.png" alt="pdf" class="logo_contact" />CV en PDF</a>
+                    <a href="CV-Anais-DIEZ.pdf" target="_blank"><img src="./Images/pdf.png" alt="pdf" class="logo_contact" />CV en PDF</a>
                 </li>
             </ul>
         </div>
@@ -59,7 +59,7 @@
         <div class="overlay-content" id="presentation_projet">
             <label for="overlay-toggle-projet" class="close-button">&times;</label>
             <ul>
-                <p>"Ver'ify Compost" est un projet de site web lancé fin octobre 2024 dans le cadre de ma formation en développement web mobile. L'objectif principal du site est d'aider au tri des biodéchets, les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires et rapides.</p><p>Le site est accessible en ligne (en mobile first), en étant toujours en cours de développement. Certaines pages peuvent être incomplètes (lien ci-dessous).</p>
+                <p>"Ver'ify Compost" est un projet de site web lancé fin octobre 2024 dans le cadre de ma formation en développement web mobile. L'objectif principal du site est d'aider au tri des biodéchets, les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires et rapides.</p><p>Le site est accessible en ligne, en étant toujours en cours de développement. Certaines pages peuvent être incomplètes (lien ci-dessous).</p>
                 <li>
                     <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/verifycompost.png" alt="logo_site_web" class="logo_contact" id="verifycompost"/></a>
                 </li>
