correction lien cv pdf

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="information">
         <h1 class="profile_name">Anaïs DIEZ</h1>
-        <p class="profile_presentation">Après 13 années en tant que factrice, j'ai entrepris avec succès une formation dans le <strong>Développement Web et Web mobile</strong> à l’ADRAR Digital Academy. Cette formation m’a permis de maîtriser <strong>HTML5, CSS3, JavaScript</strong>. J’ai également acquis des compétences en back-end, notamment en <strong>PHP, SQL</strong>, et dans la mise en place d'<strong>API REST</strong>. Actuellement en stage de deux mois, je me forme plus en profondeur à <strong>React</strong> et découvre aussi l’univers de <strong>WordPress</strong>.</p>
+        <p class="profile_presentation">Après 13 années en tant que factrice, j'ai entrepris avec succès une formation dans le <strong>Développement Web et Web mobile</strong> à l’ADRAR. Cette formation m’a permis de maîtriser <strong>HTML5, CSS3, JavaScript</strong>. J’ai également acquis des compétences en back-end, notamment en <strong>PHP, SQL</strong>, et dans la mise en place d'<strong>API REST</strong>. Actuellement, je me forme plus en profondeur à <strong>React</strong> et découvre aussi l’univers de <strong>WordPress</strong>.</p>
         <br>
         <p class="profile_presentation">Au-delà des compétences techniques, cette formation a été particulièrement enrichissante, tant sur le plan professionnel que personnel et m’a donné l'envie de poursuivre cet apprentissage. C’est pourquoi je désire désormais suivre une formation en <strong>Conception et Développement d'Applications</strong> afin d'obtenir un <strong>titre professionnel de niveau 6</strong> (équivalent à un <strong>BAC +3/4)</strong>.</p>
         <br>
