modification adresse verify compost

--- a/index.html
+++ b/index.html
@@ -61,13 +61,9 @@
         <div class="overlay-content" id="presentation_projet">
             <label for="overlay-toggle-projet" class="close-button">&times;</label>
             <ul>
-                <p>"Ver'ify Compost" est un projet de site web lancé fin octobre 2024 dans le cadre de ma formation en développement web mobile. L'objectif principal du site est d'aider au tri des biodéchets, les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires et rapides.</p><p>Le site est accessible en ligne, en étant toujours en cours de développement. Certaines pages peuvent être incomplètes (lien ci-dessous).</p>
+                <p>"Ver'ify Compost" est un projet de site web lancé fin octobre 2024 dans le cadre de ma formation en développement web mobile. L'objectif principal du site est d'aider au tri des biodéchets, les utilisateurs de composteurs et de lombricomposteurs, en mettant en avant des informations claires et rapides.</p>
                 <li>
-                    <a href="https://ver-ify-compost.vercel.app" target="_blank"><img src="./Images/verifycompost.png" alt="logo_site_web" class="logo_contact" id="verifycompost"/></a>
-                </li>
-                <p>Le prototype dynamique du site est également disponible sur mon Figma.</p>
-                <li>
-                    <a href="https://www.figma.com/design/I3VE2n0b4SOG1q0VF3Tl2E/Projet-Ver'ify-Compost?node-id=672-1132&node-type=canvas&t=hweVFGwSEwvgwlLe-0" target="_blank"><img src="./Images/figma.png" alt="logo_figma" class="logo_contact"/></a>
+                    <a href="https://verify-compost.vercel.app" target="_blank"><img src="./Images/verifycompost.png" alt="logo_site_web" class="logo_contact" id="verifycompost"/></a>
                 </li>
             </ul>
         </div>
